<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 通用设置 -->
    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="generalCategory"
        android:title="@string/general_settings"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.IconListPreference
            android:defaultValue="ic_launcher"
            android:entries="@array/icon_names"
            android:entryValues="@array/icons"
            android:key="launcherIcon"
            android:summary="@string/change_icon_summary"
            android:title="@string/change_icon"
            app:iconSpaceReserved="false"
            app:icons="@array/icons" />

        <io.legado.app.lib.prefs.Preference
            android:key="welcomeStyle"
            android:title="@string/welcome_style"
            android:summary="@string/welcome_style_summary" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="transparentStatusBar"
            android:summary="@string/status_bar_immersion"
            android:title="@string/immersion_status_bar"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="immNavigationBar"
            android:summary="@string/imm_navigation_bar_s"
            android:title="@string/imm_navigation_bar"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="barElevation"
            android:summary="@string/bar_elevation_s"
            android:title="@string/bar_elevation"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="fontScale"
            android:summary="@string/font_scale_summary"
            android:title="@string/font_scale"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <!-- 界面管理 -->
    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="interfaceCategory"
        android:title="@string/interface_manage"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="applicationThemeManage"
            android:summary="@string/application_theme_summary"
            android:title="@string/application_theme_manage"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="themeList"
            android:summary="@string/theme_list_summary"
            android:title="@string/theme_list"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="navigationBarManage"
            android:summary="@string/navigation_bar_manage_summary"
            android:title="@string/navigation_bar_manage"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="topBarManage"
            android:summary="@string/top_bar_manage_summary"
            android:title="@string/top_bar_manage"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="bubbleManage"
            android:summary="@string/bubble_manage_summary"
            android:title="@string/bubble_manage"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <!-- 其他设置 -->
    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="otherCategory"
        android:title="@string/other_settings"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="coverConfig"
            android:title="@string/cover_config"
            android:summary="@string/cover_config_summary"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
